--- a/contact.html
+++ b/contact.html
@@ -269,7 +269,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="breadcrumb-item">
-              <h2 class="title">About us</h2>
+              <h2 class="title">Contact us</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
@@ -289,51 +289,6 @@
 
     <!--====== SAINTACO COMPANY ABOUT PART ENDS ======-->
 
-    <section class="infetech-company-about-area">
-      <div class="container">
-        <div class="row align-items-center">
-          <div
-            class="col-lg-6 animated wow fadeInLeft"
-            data-wow-duration="1000ms"
-            data-wow-delay="0ms"
-          >
-            <div class="company-about-thumb">
-              <div class="icon">
-                <img src="assets/images/SAINTACO LOGO.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="infetech-about-content">
-              <span>About Our Company</span>
-              <h3 class="title" id="about-title">
-                We Empower Growth in the Digital Age.
-              </h3>
-              <p>
-                <strong>Saintaco Cyberspace Based Resource</strong> is a
-                certified computer academy that deliver real-time professional
-                IT solutions designed to meet your needs. From advanced training
-                at our Computer Academy to seamless Educational, Payment,
-                Examination, and General IT Services. With a focus on excellence
-                and customer satisfaction.
-              </p>
-              <ul>
-                <li><i class="fal fa-check"></i> Trusted Professionals</li>
-                <li><i class="fal fa-check"></i> Serve the best</li>
-              </ul>
-              <a class="pop-btn" id="saintaco-learn">Learn More</a>
-              <a
-                href="https://i.ibb.co/DWgf546/saintaco-cert.jpg"
-                class="main-btn"
-              >
-                Certified
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <div class="whatsapp-popup" id="wa-pop">
       <div>
         <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
@@ -343,61 +298,7 @@
         </button>
       </div>
     </div>
-    <!--====== INFETECH COMPANY ABOUT PART ENDS ======-->
-
-    <!--====== SAINTACO FUN FACTS PART ENDS ======-->
-
-    <section
-      class="infetech-fun-facts-area infetech-fun-facts-about-area pb-120"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">100</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Customer's Satisfaction</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">12</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Glorious Years</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">750</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Active Clients</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="fun-facts-item">
-              <h4 class="title">
-                <span class="counter">10</span> <sup>+</sup>
-              </h4>
-              <div class="content-box">
-                <span>Professional Team</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--====== SAINTACO FUN FACTS PART ENDS ======-->
+    <!--====== SAINTACO COMPANY ABOUT PART ENDS ======-->
 
     <!--====== SAINTACO TEAM PART STARTS ======-->
 
@@ -406,7 +307,7 @@
         <div class="row align-items-center mb-50">
           <div class="col-lg-6">
             <div class="section-title">
-              <span>Our Expert People</span>
+              <span>Our Expert Personels</span>
               <h4 class="title">Meet Our Professional Team Members</h4>
             </div>
           </div>
@@ -528,6 +429,90 @@
     </section>
 
     <!--====== SAINTACO TEAM PART ENDS ======-->
+    <!--====== SAINTACO CONTACT PART STARTS ======-->
+    <section class="infetech-home-contact pb-115" id="contact">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-lg-6 animated wow fadeInLeft"
+            data-wow-duration="50ms"
+            data-wow-delay="0ms"
+          >
+            <div class="home-contact-leftbar">
+              <div class="thumb">
+                <img
+                  src="assets/images/SAINTACO LOGO.jpg"
+                  style="height: 350px"
+                  alt=""
+                />
+              </div>
+              <div class="contact-content-item mt-60">
+                <div class="icon">
+                  <i class="fal fa-check"></i>
+                </div>
+                <div class="content">
+                  <h4 class="title">Online Based Services</h4>
+                  <p>We're always active, you're just a DM away!.</p>
+                </div>
+              </div>
+              <div class="contact-content-item mt-70">
+                <div class="icon">
+                  <i class="fal fa-check"></i>
+                </div>
+                <div class="content">
+                  <h4 class="title">Expert Team Members</h4>
+                  <p>Customer Satisfaction is our priority!.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="col-lg-6 animated wow fadeInRight"
+            data-wow-duration="50ms"
+            data-wow-delay="300ms"
+          >
+            <div class="home-contact-box">
+              <form action="https://formspree.io/f/xrbgwvpy" method="post">
+                <div class="section-title text-center mb-25">
+                  <span>Contact with Us</span>
+                  <h3 class="title">Contact Us Now!</h3>
+                </div>
+                <div class="input-box">
+                  <input
+                    type="text"
+                    placeholder="Your Name"
+                    name="Fullname"
+                    required
+                  />
+                </div>
+                <div class="input-box">
+                  <input
+                    type="email"
+                    placeholder="Email Address"
+                    name="email"
+                    required
+                  />
+                </div>
+                <div class="input-box">
+                  <textarea
+                    name="Message"
+                    id="#"
+                    cols="30"
+                    rows="10"
+                    placeholder="Write a Message"
+                    required
+                  ></textarea>
+                </div>
+                <div class="input-box">
+                  <button class="main-btn" type="submit">Send a message</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!--====== SAINTACO PROMO BANNER PART STARTS ======-->
 
