--- a/hjk.html
+++ b/hjk.html
@@ -1,93 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>popup</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <style>
-      .whatsapp-popup {
-        height: 100vh;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-        background-color: #602deed5;
-        transition: ease-in-out 0.5s;
-        backdrop-filter: blur(20px);
-        -webkit-backdrop-filter: blur(20px);
-        position: fixed;
-        top: 0;
-        left: 0;
-      }
-      .whatsapp-popup div {
-        border-radius: 10px;
-        padding: 50px;
-        background-color: aliceblue;
-        display: grid;
-        grid-template-columns: repeat(autofit, minmax(1fr, 300px));
-        column-gap: 10px;
-        gap: 20px;
-        transition: ease-in-out 0.5s;
-      }
-      #wa-pop-h5 {
-        grid-column: 1 / 3;
-        text-align: center;
-      }
-      .wa-pop-btn {
-        border: transparent;
-        background-color: #5f2dee;
-        font-weight: 600;
-        font-size: large;
-        color: #fff;
-        border-radius: 10px;
-        transition: ease-in-out 0.5s;
-      }
-      #wa-end-btn {
-        padding: 10px;
-      }
-      #wa-btn a {
-        border-radius: 10px;
-        padding: 10px;
-        color: #fff;
-        width: 100%;
-        transition: ease-in-out 0.5s;
-      }
-      #wa-end-btn:hover {
-        background-color: red;
-      }
-      #wa-btn a:hover {
-        background-color: lime;
-        height: 100%;
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="whatsapp-popup" id="wa-pop">
-      <div>
-        <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
-        <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
-        <button class="wa-pop-btn" id="wa-btn">
-          <a href="https://wa.me/2347065604027">Continue</a>
-        </button>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Services</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+        <header class="text-center mb-16">
+            <h1 class="text-4xl font-bold text-gray-900 mb-4">Our Services</h1>
+            <p class="text-xl text-gray-600">Comprehensive Educational and Professional Solutions</p>
+        </header>
+
+        <!-- Educational Services Section -->
+        <section class="mb-16">
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <h2 class="text-2xl font-bold text-blue-600 mb-6">Educational Services</h2>
+                <div class="grid md:grid-cols-2 gap-6">
+                    <div>
+                        <h3 class="text-lg font-semibold mb-4">Academic Programs</h3>
+                        <ul class="space-y-3">
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                IJMB/PRELIM Application
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Post UTME Registration
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Part-time Registration
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-semibold mb-4">Administrative Services</h3>
+                        <ul class="space-y-3">
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Course Registration/Exam Card
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                LVT/SANDWICH Application
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Postgraduate Registration
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- General Services Section -->
+        <section class="mb-16">
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <h2 class="text-2xl font-bold text-blue-600 mb-6">General Services</h2>
+                <div class="grid md:grid-cols-2 gap-6">
+                    <div>
+                        <h3 class="text-lg font-semibold mb-4">Documentation Services</h3>
+                        <ul class="space-y-3">
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                JAMB Admission Letter
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                JAMB Original Result
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                NYSC Registration
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-semibold mb-4">Additional Services</h3>
+                        <ul class="space-y-3">
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Online Applications
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Passport Services
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                POS Facilities
+                            </li>
+                            <li class="flex items-center">
+                                <svg class="h-5 w-5 text-green-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                                </svg>
+                                Lamination Services
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+                <!-- Computer Academy Section -->
+        <section class="mb-16">
+            <div class="bg-white rounded-lg shadow-lg p-8">
+                <h2 class="text-2xl font-bold text-blue-600 mb-6">Computer Academy</h2>
+                <div class="bg-blue-50 border-l-4 border-blue-500 p-4">
+                    <p class="text-blue-700">
+                        Enhance your digital skills with our comprehensive computer training programs. Register now to secure your spot in our upcoming sessions.
+                    </p>
+                    <button class="mt-4 bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors">
+                        Register Now
+                    </button>
+                </div>
+            </div>
+        </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 200">
+
+  <!-- Education Icon -->
+  <g transform="translate(50, 20)">
+    <title>Educational Services Icon</title>
+    <!-- Graduation Cap -->
+    <path d="M100,40 L180,70 L100,100 L20,70 L100,40Z" fill="#5f2dee"/>
+    <path d="M180,70 L180,110 M60,85 L60,120 C60,130 100,140 100,140 C100,140 140,130 140,120 L140,85" 
+          fill="none" stroke="#5f2dee" stroke-width="3"/>
+    <!-- Books -->
+    <rect x="70" y="110" width="60" height="50" fill="#6a3fe244"/>
+    <rect x="65" y="115" width="60" height="50" fill="#6a3fe28f"/>
+    <rect x="60" y="120" width="60" height="50" fill="#6a3fe2"/>
+  </g>
+
+  <!-- Computer Academy Icon -->
+  <g transform="translate(350, 20)">
+    <title>Computer Academy Icon</title>
+    <!-- Monitor -->
+    <rect x="20" y="40" width="160" height="100" rx="5" fill="#4F46E5"/>
+    <rect x="25" y="45" width="150" height="90" rx="3" fill="#FFFFFF"/>
+    <!-- Code Symbols -->
+    <text x="45" y="80" fill="#4F46E5" font-family="monospace" font-size="14">&lt;/&gt;</text>
+    <text x="85" y="100" fill="#4F46E5" font-family="monospace" font-size="14">{}</text>
+    <text x="125" y="120" fill="#4F46E5" font-family="monospace" font-size="14">[]</text>
+    <!-- Stand -->
+    <path d="M70,140 L130,140 L120,160 L80,160 Z" fill="#818CF8"/>
+    <rect x="90" y="160" width="20" height="5" fill="#6366F1"/>
+  </g>
+
+  <!-- General Services Icon -->
+  <g transform="translate(650, 20)">
+    <title>General Services Icon</title>
+    <!-- Gear -->
+    <path d="M100,50 L110,50 L115,35 L85,35 L90,50 L100,50" fill="#4F46E5"/>
+    <circle cx="100" cy="100" r="40" fill="none" stroke="#4F46E5" stroke-width="3"/>
+    <circle cx="100" cy="100" r="25" fill="#818CF8"/>
+    <!-- Tools -->
+    <rect x="60" y="90" width="80" height="20" rx="5" fill="#6366F1"/>
+    <circle cx="100" cy="100" r="15" fill="#4F46E5"/>
+    <!-- Service Lines -->
+    <line x1="70" y1="140" x2="130" y2="140" stroke="#4F46E5" stroke-width="3"/>
+    <line x1="75" y1="150" x2="125" y2="150" stroke="#4F46E5" stroke-width="3"/>
+    <line x1="80" y1="160" x2="120" y2="160" stroke="#4F46E5" stroke-width="3"/>
+  </g>
+</svg>
+
+        <footer class="text-center text-gray-600">
+            <p>Contact us for more information about our services</p>
+        </footer>
     </div>
-
-    <script>
-      const learnMore = document.getElementById("saintaco-learn")
-      const whatsappPopup = document.getElementById("wa-pop");
-      const contactButton = document.getElementById("wa-btn");
-      const closeButton = document.getElementById("wa-end-btn");
-
-      learnMore.addEventListener("click", function () {
-        whatsappPopup.style.display = "flex";
-      });
-
-      closeButton.addEventListener("click", function () {
-        whatsappPopup.style.display = "none";
-      });
-    </script>
-  </body>
+</body>
 </html>
